# tdbc

./: Makefile.in  configure  configure.ac
doc/: tdbc.n  tdbc_connection.n  tdbc_pool.n  tipXXX.md
generic/: tdbc.c  tdbc.decls  tdbcDecls.h  tdbcInt.h  tdbcParseConvenienceArgs.c  tdbcStubInit.c
tdbc/generic/: tdbcInt.h
tdbc/win/: CMakeLists.txt
tdbcodbc/generic/: tdbcodbc.c
tdbcodbc/win/: CMakeLists.txt
tdbcsqlite3/win/: CMakeLists.txt
tests/: pool.test  tdbc.test
